Corrected navbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -850,7 +850,7 @@ footer {
     }
 
     #welcome-section {
-        margin-top: 6vh;
+        margin-top: 3.5em;
         align-items: end;
     }
 
